--- a/collapse.css
+++ b/collapse.css
@@ -7,23 +7,27 @@
 	height: 97vh;
 	box-sizing: border-box;
 	border: solid 5px blue;
+	border-radius: 10px;
 }
+
 
 .collGroupContainer1{
 	margin-top: 1vh;
 	display: flex;
 	width: 98vw;
 	flex-direction: column;
+	
 }
 
-.collGroup {
+.collGroup1 {
 	height: 8vh;
 	width: 92%;
 	margin: 0vh 2vw 0vh 2vw;
 	padding: 0vh 2vw 0vh 2vw;
 	display: flex;
-	align-items: center;
-	border: solid 1px blue;
+	align-items: center;border: solid 1px blue;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
 }
 
 .group1:hover {
@@ -36,13 +40,22 @@
 	margin: 0vh 2vw 0vh 2vw;
 	padding: 0vh 2vw 0vh 2vw;
 	display: none;
-	border: solid 1px red;
+	border: solid 1px blue;
 }
 
 .collGroupContainer2{
 	display: flex;
 	width: 98vw;
 	flex-direction: column;
+}
+
+.collGroup2 {
+	height: 8vh;
+	width: 92%;
+	margin: 0vh 2vw 0vh 2vw;
+	padding: 0vh 2vw 0vh 2vw;
+	display: flex;
+	align-items: center;border: solid 1px blue;
 }
 
 .group2:hover {
@@ -55,13 +68,24 @@
 	margin: 0vh 2vw 0vh 2vw;
 	padding: 0vh 2vw 0vh 2vw;
 	display: none;
-	border: solid 1px red;
+	border: solid 1px blue;
 }
 
 .collGroupContainer3{
 	display: flex;
 	width: 98vw;
 	flex-direction: column;
+}
+
+.collGroup3 {
+	height: 8vh;
+	width: 92%;
+	margin: 0vh 2vw 0vh 2vw;
+	padding: 0vh 2vw 0vh 2vw;
+	display: flex;
+	align-items: center;border: solid 1px blue;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .group3:hover {
@@ -74,7 +98,7 @@
 	margin: 0vh 2vw 0vh 2vw;
 	padding: 0vh 2vw 0vh 2vw;
 	display: none;
-	border: solid 1px red;
+	border: solid 1px blue;
 }
 
 .location{
@@ -87,6 +111,7 @@
 
 .btnArea {
 	border: solid 1px red;
+	border-radius: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
