--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 	height: 97vh;
 	box-sizing: border-box;
 	border: solid 5px blue;
+	border-radius: 10px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -19,6 +20,7 @@
 	width: 30%;
 	box-sizing: border-box;
 	border: solid 5px black;
+	border-radius: 10px;
 	background-color: white;
 	display: flex;
 	justify-content: center;
@@ -33,6 +35,7 @@
 	width: 30%;
 	box-sizing: border-box;
 	border: solid 5px green;
+	border-radius: 10px;
 	background-color: white;
 	display: flex;
 	justify-content: center;
@@ -47,6 +50,7 @@
 	width: 30%;
 	box-sizing: border-box;
 	border: solid 5px yellow;
+	border-radius: 10px;
 	background-color: white;
 	display: flex;
 	justify-content: center;
