--- a/modal.css
+++ b/modal.css
@@ -70,7 +70,8 @@
 .modalContent {
 	padding: 0vh 2vw 0vh 2vw;
 	height: 59%;
-	
+	overflow-y: scroll;
+	overflow-x: none;
 }
 .modalContent:after  {
 	width: 100%;
