--- a/collapse.css
+++ b/collapse.css
@@ -120,6 +120,18 @@
 	background-color: white;
 }
 
+@media screen and (max-width : 767px){
+	.collGroupContainer1{
+		width: 92vw;
+	}
+	.collGroupContainer2{
+		width: 92vw;
+	}
+	.collGroupContainer3{
+		width: 92vw;
+	}
+}
+
 
 
 
